src/flutter_plugin.h

/**
 * フレームインターバル/フレームレートの最大数
 * 規格上はこれより多い可能性があるけどとりあえず128に制限
 */
#define MAX_INTERVALS (128)
/**
 * UVC機器との接続状態
 * should match to device_state_t in aandusb_native.h
 */
typedef enum device_state {
	/**
	 * プラグインが初期化されていない
	 */
	UNINITIALIZED = -1,
	/**
	 * 指定した機器が接続されていない
	 */
	DISCONNECTED = 0,
	/**
	 * 指定した機器が接続されている(映像取得中ではない)
	 */
	CONNECTED = 1,
	/**
	 * 指定した機器が接続されており映像取得中
	 */
	STREAMING = 2,
} device_state_t;
// Camera Terminal DescriptorのbmControlsフィールドのビットマスク
#define	FLG_CTRL_SCANNING		(0x00000001)	// D0:  Scanning Mode
#define	FLG_CTRL_AE				(0x00000002)	// D1:  Auto-Exposure Mode
#define	FLG_CTRL_AE_PRIORITY	(0x00000004)	// D2:  Auto-Exposure Priority
#define	FLG_CTRL_AE_ABS			(0x00000008)	// D3:  Exposure Time (Absolute)
#define	FLG_CTRL_AE_REL			(0x00000010)	// D4:  Exposure Time (Relative)
#define FLG_CTRL_FOCUS_ABS    	(0x00000020)	// D5:  Focus (Absolute)
#define FLG_CTRL_FOCUS_REL		(0x00000040)	// D6:  Focus (Relative)
#define FLG_CTRL_IRIS_ABS		(0x00000080)	// D7:  Iris (Absolute)
#define	FLG_CTRL_IRIS_REL		(0x00000100)	// D8:  Iris (Relative)
#define	FLG_CTRL_ZOOM_ABS		(0x00000200)	// D9:  Zoom (Absolute)
#define FLG_CTRL_ZOOM_REL		(0x00000400)	// D10: Zoom (Relative)
#define	FLG_CTRL_PANTILT_ABS	(0x00000800)	// D11: PanTilt (Absolute)
#define	FLG_CTRL_PAN_ABS		(0x01000800)	// D11: PanTilt (Absolute)
#define	FLG_CTRL_TILT_ABS		(0x02000800)	// D11: PanTilt (Absolute)
#define FLG_CTRL_PANTILT_REL	(0x00001000)	// D12: PanTilt (Relative)
#define	FLG_CTRL_PAN_REL		(0x01001000)	// D12: PanTilt (Relative)
#define	FLG_CTRL_TILT_REL		(0x02001000)	// D12: PanTilt (Relative)
#define FLG_CTRL_ROLL_ABS		(0x00002000)	// D13: Roll (Absolute)
#define FLG_CTRL_ROLL_REL		(0x00004000)	// D14: Roll (Relative)
#define FLG_CTRL_D15			(0x00008000)	// D15: Reserved
#define FLG_CTRL_D16			(0x00010000)	// D16: Reserved
#define FLG_CTRL_FOCUS_AUTO		(0x00020000)	// D17: Focus, Auto
#define FLG_CTRL_PRIVACY		(0x00040000)	// D18: Privacy
#define FLG_CTRL_FOCUS_SIMPLE	(0x00080000)	// D19: Focus, Simple
#define FLG_CTRL_WINDOW			(0x00100000)	// D20: Window
#define FLG_CTRL_ROI			(0x00200000)	// D21: ROI
#define FLG_CTRL_D22			(0x00400000)	// D22: Reserved
#define FLG_CTRL_D23			(0x00800000)	// D23: Reserved
/**
 * Flutterのc#側とUVCコントロール機能の設定値等をやりとりするための構造体定義
 * Flutterのc#側にも同じ構造体を定義する必要がある
 * should match to uvc_control_info_t in aandusb_native.h
 */
typedef struct flutter_control_info {
	uint64_t type;			// UVCコントロールの種類(CTRL_XXXまたはPU_XXX)
	int32_t initialized;	// 初期化済みかどうか
	int32_t has_min_max;	// 最大最小値を持つかどうか
	int32_t def;			// デフォルト値
	int32_t current;		// 現在値
	int32_t res;			// 分解能
	int32_t min;			// 最小値
	int32_t max;			// 最大値
} __attribute__((__packed__)) flutter_control_info_t;
/**
 * Flutterのc#側と映像サイズ設定をやりとりするための構造体定義
 * Flutterのc#側にも同じ構造体を定義する必要がある
 * should match to uvc_video_size_t in aandusb_native.h
 */
typedef struct flutter_video_size {
	uint32_t frame_type;
	/**
	 * フレームインデックス
	 */
	int32_t frame_index;
	/**
	 * 映像幅[ピクセル数]
	 */
	uint32_t width;
	/**
	 * 映像高さ[ピクセル数]
	 */
	uint32_t height;
	/**
	 * フレームレートのタイプ
	 * 0: min/max/stepの3つのuint32_tで指定
	 * 正数: フレームインターバルデータの個数
	 */
	int32_t frame_interval_type;
	/**
	 * フレームインターバルデータ
	 */
	uint32_t frame_intervals[MAX_INTERVALS];
	/**
	 * フレームインターバルデータの個数
	 */
	int32_t num_frame_intervals;
	/**
	 * フレームレート
	 */
	float fps[MAX_INTERVALS];
	/**
	 * フレームレートの個数
	 */
	int32_t num_fps;
} __attribute__((__packed__)) flutter_video_size_t;
/**
 * 接続しているUSB機器情報
 * should match to usb_device_info_t in aandusb_native.h
 */
typedef struct flutter_device_info {
	uint32_t vendor_id;
	uint32_t product_id;
	uint8_t device_class;
	uint8_t device_subclass;
	uint8_t device_protocol;
	uint8_t reserved1;
	uint8_t name[128];
	uint8_t manufacturer_name[128];
	uint8_t product_name[128];
	uint8_t serial[128];
} __attribute__((__packed__)) flutter_device_info_t;
//--------------------------------------------------------------------------------
// DartのFlutterプラグイン部分から呼ばれる関数

EXTERN_C
int64_t initialize_dart_api(void *data);
EXTERN_C
void set_dart_api_message_port(int64_t port);
EXTERN_C
int32_t get_state(int32_t device_id);
EXTERN_C
int32_t  get_device_info(int32_t device_id, flutter_device_info_t *info_out);
EXTERN_C
int64_t start(int32_t device_id);
EXTERN_C
int32_t stop(int32_t device_id);
EXTERN_C
int set_video_size(
	int32_t device_id,
	uint32_t type,
	uint32_t width, uint32_t height);
EXTERN_C
int get_current_size(
	int32_t device_id,
	flutter_video_size_t *data);
/**
 * コントロール機能でサポートしている機能を取得
 * @param device_id
 * @return
 */
EXTERN_C
uint64_t get_ctrl_supports(int32_t device_id);
/**
 * プロセッシングユニットでサポートしている機能を取得
 * @param device_id
 * @return
 */
EXTERN_C
uint64_t get_proc_supports(int32_t device_id);
/**
 * 指定した機能の設定情報を取得
 * @param device_id
 * @param value
 * @return
 */
EXTERN_C
int32_t get_ctrl_info(int32_t device_id, flutter_control_info_t *value);
/**
 * 指定した機能の設定値を適用
 * @param device_id
 * @param type
 * @param value
 * @return
 */
EXTERN_C
int32_t set_ctrl_value(int32_t device_id, uint64_t type, int32_t value);
/**
 * 指定した機能の設定値を取得
 * @param device_id
 * @param type
 * @param value
 * @return
 */
EXTERN_C
int32_t get_ctrl_value(int32_t device_id, uint64_t type, int32_t *value);
/**
 * native側でUVC映像サイズ設定へアクセスするときのヘルパー関数
 * 主にUnityやFlutterからのアクセスを想定
 * @param device_id
 * @param index 映像サイズ設定のインデックス
 * @param num_supported 対応している映像サイズ設定の数を入れるuint32_tへのポインタ
 * @param data 映像サイズ設定を書き込むためのunity_video_size_t構造体へのポインタ
 * @return 0: 成功, 負: エラーコード
 */
EXTERN_C
int32_t get_supported_size(
	int32_t device_id,
	int32_t index, int32_t *num_supported, flutter_video_size_t *data);
/**
 * 映像取得用のsurfaceをセットする
 * @param device_id UVC機器の識別子
 * @param tex_id   テクスチャID
 * @param jsurface Java側のSurfaceオブジェクト
 */
EXTERN_C
int32_t set_preview_surface(
	int32_t device_id,	// jint
	int64_t tex_id,		// jlong
	void *jsurface);	// jobject jsurface